# .dotfiles

./: .bashrc  .gitconfig  .gitignore_global  .gitmodules  .nanorc  .tmux.conf  .vimrc  README.md  justfile
ahk/: startup.ahk
alacritty/: alacritty.toml  alacritty.yml
asynctask/: tasks.ini
atuin/: config.toml
autohotkey/: startup.ahk
bash/: .bashrc
btop/: btop.conf
cargo/: config.toml
clangd/: config.yaml
claude/: CLAUDE.md  mcp.json  settings.json
codex/: config.toml
docker/: config.json
fish/: config.fish  fish-ai.ini  fish_plugins
fluent-reader/: source.opml
fontconfig/: fonts.conf
foot/: foot.ini
gdb/: .gdbinit
gemini/: settings.json
git/: .gitconfig  ignore
go-musicfox/: go-musicfox.ini
helix/: config.toml
hypr/: hyprland.conf
idea/: .ideavimrc
kitty/: base.conf  goto_tab.py  kitty.conf
lazygit/: config.yml
listen1/: listen1_backup.json
mise/: config.toml
nano/: .nanorc
niri/: config.kdl
nvim/: .neoconf.json  init.lua  lazy-lock.json  mcp.json  mcphub.json  stylua.toml  tasks.ini
opencode/: AGENTS.md  oh-my-opencode.json  oh-my-opencode.jsonc  opencode.jsonc
pacman/: packages-AUR.txt  packages-repository.txt
pi/: settings.json
pip/: packages-pipx.txt
pipx/: packages.txt
powershell/: Microsoft.PowerShell_profile.ps1
qwen/: settings.json
rofi/: catppuccin-default.rasi  catppuccin-mocha.rasi
starship/: starship.toml
systemd/: aria2.service  set-theme-on-startup.service  set-theme@.service  set-theme@dark.timer  set-theme@light.timer  vcxsrv.service
vim/project_templates/cmake/: CMakeLists.txt
(+358 files in other folders)
